# GDigiObs

./: .env.example  .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/controller/: __init__.py  agent_controller.py  analysis_controller.py  audit_controller.py  auth_controller.py  chroma_config_controller.py  clean_controller.py  collect_controller.py  conversation_controller.py  dashboard_controller.py  dify_controller.py  file_controller.py  group_controller.py  knowledge_controller.py  model_config_controller.py  notification_controller.py  organization_controller.py  rbac_controller.py  skill_controller.py  system_config_controller.py  tenant_controller.py  user_controller.py  workflow_controller.py  ws_controller.py
backend/core/: agent_engines.py  ai_chat_detector.py  chroma_client.py  config.py  dependencies.py  dify_client.py  dify_kb_client.py  embedding_client.py  exceptions.py  knowledge_parser.py  knowledge_retrieval.py  llm_client.py  message_auditor.py  rerank_client.py  response.py  security.py  sql_validator.py  workflow_executors.py  ws_manager.py
backend/dao/: __init__.py  agent_dao.py  alert_dao.py  analysis_dao.py  audit_dao.py  chroma_config_dao.py  clean_dao.py  collect_dao.py  conversation_dao.py  dify_dao.py  file_dao.py  group_dao.py  knowledge_dao.py  model_config_dao.py  notification_dao.py  rbac_dao.py  skill_call_log_dao.py  skill_dao.py  tenant_dao.py  user_dao.py  user_dao_extra.py  workflow_dao.py
backend/database/: migrate.py  session.py
backend/model/: __init__.py  agent.py  alert.py  analysis.py  (+24 more)
(+240 files in other folders)
