[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.138.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymysql>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "sqlparse>=0.5.5",
    "crawl4ai>=0.4.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
